<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:paddingBottom="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/row_item_border">

        <TextView
            android:id="@+id/bookNameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookNameHint"
            android:textColor="@color/textColor"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/bookStatusItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statusHint"
            android:textColor="@color/textColor"
            android:gravity="end"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/authorNameItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorNameHint"
            android:textColor="@color/textColor"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

</RelativeLayout>