<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookDetailsText"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        />

    <EditText
        android:id="@+id/bookNameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-light"
        android:textStyle="italic"
        android:hint = "@string/bookNameHint"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="225dp"
        android:backgroundTint="@color/editTextTintColor"
        />

    <EditText
        android:id="@+id/authorNameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-light"
        android:textStyle="italic"
        android:hint = "@string/authorNameHint"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/bookNameEditText"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/editTextTintColor"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/textColor"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_borders"
        android:padding="15dp"
        style="@style/Widget.AppCompat.Button.Colored"
        />

</RelativeLayout>